Library/AXL(Library)/C#/AXDev.cs


// Setting whether using alarm maintenance function when switch to slave offline mode.(Only for M3)
// dwSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// dwSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
[DllImport("AXL.dll")] public static extern uint AxmM3SetOfflineAlarmEnable(int nAxisNo, uint dwSel);

// Get 'AxmM3SetOfflineAlarmEnable' setting value.(Only for M3)
// upSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// upSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
[DllImport("AXL.dll")] public static extern uint AxmM3GetOfflineAlarmEnable(int nAxisNo, ref uint upSel);

// Read value of slave online or offline status. (Only for M3)
// upSel: 0, ONLINE->OFFLINE Not converted
// upSel: 1, ONLINE->OFFLINE converted
[DllImport("AXL.dll")] public static extern uint AxmM3ReadOnlineToOfflineStatus(int nAxisNo, ref uint upStatus);

    [DllImport("AXL.dll")] public static extern uint AxlSetLockMode(int lBoardNo, uint wLockMode);
    [DllImport("AXL.dll")] public static extern uint AxlSetLockData(int lBoardNo, uint dwTotalNodeNum, ref uint dwpNodeNo, ref uint dwpNodeID, ref uint dwpLockData);
    [DllImport("AXL.dll")] public static extern uint AxmMoveStartPosWithAVC(int lAxisNo, double dPosition, double dMaxVelocity, double dMaxAccel, double dMinJerk, ref double dpMoveVelocity, ref double dpMoveAccel, ref double dpMoveJerk);
//======== API for EtherCAT only =============================================================================
// The API for read VendorID, ProductCode and RevisionNo of EtherCat slave product by using StationAddress.
[DllImport("AXL.dll")] public static extern uint AxlECatGetProductInfo(uint dwStationAddress, ref uint upVendorID, ref uint upProductCode, ref uint upRevisionNo);
    [DllImport("AXL.dll")] public static extern uint AxlECatGetProductInfoEx(int lBoardNo, uint dwStationAddress, ref uint pdwVendorID, ref uint pdwProductCode, ref uint pdwRevisionNo);

// The API for verifying network status of EtherCAT slave product by using StationAddress.
[DllImport("AXL.dll")] public static extern uint AxlECatGetModuleStatus(uint dwStationAddress);

// Read input PDO(Process Data Objects)
// dwBitOffset     : ProcessImage inputs bit offset value.
// dwDataBitLength : bit size of input pdo data.
// pbyData         : The Buffer for inserting read data.
[DllImport("AXL.dll")] public static extern uint AxlECatReadPdoInput(uint dwBitOffset, uint dwDataBitLength, ref byte bpData);
    [DllImport("AXL.dll")] public static extern uint AxlECatReadPdoInputEx(int lBoardNo, uint dwBitOffset, uint dwDataBitLength, ref byte pbyData);

// Read output PDO(Process Data Objects)
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of input pdo data.(for read)
// pbyData         : The Buffer for inserting read data.
[DllImport("AXL.dll")] public static extern uint AxlECatReadPdoOutput(uint dwBitOffset, uint dwDataBitLength, ref byte bpData);
    [DllImport("AXL.dll")] public static extern uint AxlECatReadPdoOutputEx(int lBoardNo, uint dwBitOffset, uint dwDataBitLength, ref byte pbyData);

// Write value to output process data.
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of output pdo data.(for write)
// pbyData         : The Buffer for inserting write data.
[DllImport("AXL.dll")] public static extern uint AxlECatWritePdoOutput(uint dwBitOffset, uint dwDataBitLength, ref byte pbyData);

// Read SDO(Service Data Objects) by using COE.
[DllImport("AXL.dll")] public static extern uint AxlECatReadSdo(uint dwStationAddress, ushort wObjectIndex, byte byObjectSubIndex, ref byte pbyData, uint dwDataLength, ref uint pdwReadDataLength);
    [DllImport("AXL.dll")] public static extern uint AxlECatReadSdoEx(int lBoardNo, uint dwStationAddress, uint wObjectIndex, byte byObjectSubIndex, ref byte pbyData, uint dwDataLength, ref uint pdwReadDataLength);

// Store values in SDO by using COE.
[DllImport("AXL.dll")] public static extern uint AxlECatWriteSdo(uint dwStationAddress, ushort wObjectIndex, byte byObjectSubIndex, ref byte pbyData, uint dwDataLength);
    [DllImport("AXL.dll")] public static extern uint AxlECatWriteSdoEx(int lBoardNo, uint dwStationAddress, uint wObjectIndex, byte byObjectSubIndex, ref byte pbyData, uint dwDataLength);

    [DllImport("AXL.dll")] public static extern uint AxlECatReadSdoFromAxisDouble(int lAxisNo, uint wObjectIndex, byte byObjectSubIndex, ref double pdData);

    [DllImport("AXL.dll")] public static extern uint AxlECatWriteSdoFromAxisDouble(int lAxisNo, uint wObjectIndex, byte byObjectSubIndex, ref double pdData);
// Read SDO(DWORD type) through the axis number.
[DllImport("AXL.dll")] public static extern uint AxlECatReadSdoFromAxisDword(int  lAxisNo, ushort wObjectIndex, byte byObjectSubIndex, ref uint pdwData);

// Store values in SDO(DWORD type) through the axis number.
[DllImport("AXL.dll")] public static extern uint AxlECatWriteSdoFromAxisDword(int  lAxisNo, ushort wObjectIndex, byte byObjectSubIndex, ref uint pdwData);

// Read SDO(WORD type) through the axis number.
[DllImport("AXL.dll")] public static extern uint AxlECatReadSdoFromAxisWord(int  lAxisNo, ushort wObjectIndex, byte byObjectSubIndex, ref ushort pwData);

// Store values in SDO(WORD type) through the axis number.
[DllImport("AXL.dll")] public static extern uint AxlECatWriteSdoFromAxisWord(int  lAxisNo, ushort wObjectIndex, byte byObjectSubIndex, ref ushort pwData);

// Read SDO(BYTE type) through the axis number.
[DllImport("AXL.dll")] public static extern uint AxlECatReadSdoFromAxisByte(int  lAxisNo, ushort wObjectIndex, byte byObjectSubIndex, ref byte pbyData);

// Store values in SDO(BYTE type) through the axis number.
[DllImport("AXL.dll")] public static extern uint AxlECatWriteSdoFromAxisByte(int  lAxisNo, ushort wObjectIndex, byte byObjectSubIndex, ref byte pbyData);

// Read value of EEPROM.
[DllImport("AXL.dll")] public static extern uint AxlECatReadEEPRom(uint dwStationAddress, ushort wEEPRomStartOffset, ref ushort pwData, uint dwDataLength);

// Write value to EEPROM.
[DllImport("AXL.dll")] public static extern uint AxlECatWriteEEPRom(uint dwStationAddress, ushort wEEPRomStartOffset, ref ushort pwData, uint dwDataLength);
    [DllImport("AXL.dll")] public static extern uint AxlECatReadEEPRomEx(int lBoardNo, uint dwStationAddress, uint wEEPRomStartOffset, ref uint pwData, uint dwDataLength);

    [DllImport("AXL.dll")] public static extern uint AxlECatWriteEEPRomEx(int lBoardNo, uint dwStationAddress, uint wEEPRomStartOffset, ref uint pwData, uint dwDataLength);

// Read value of a register.
[DllImport("AXL.dll")] public static extern uint AxlECatReadRegister(uint dwStationAddress, ushort wRegisterOffset, object pvData, ushort wLen); // Intptr?

// Write value of a register.
[DllImport("AXL.dll")] public static extern uint AxlECatWriteRegister(uint dwStationAddress, ushort wRegisterOffset, object pvData, ushort wLen); // Intptr?

// Save BackupData as a file from among the object dictionary of EtherCat slave.
[DllImport("AXL.dll")] public static extern uint AxlECatSaveHotSwapData(uint dwStationAddress);

// Load BackupData which saved as a file from corresponding EtherCat salve.
[DllImport("AXL.dll")] public static extern uint AxlECatLoadHotSwapData(uint dwStationAddress);


// When using the HotSwapStart API(Function to advance HotSwap only for registered StationAddresses),
//       it stores the StationAddress in HotSwapConfig, confirms existence and deletes it.
[DllImport("AXL.dll")] public static extern uint AxlECatSetHotSwap(uint dwStationAddress);
[DllImport("AXL.dll")] public static extern uint AxlECatIsSetHotSwap(uint dwStationAddress);
[DllImport("AXL.dll")] public static extern uint AxlECatReSetHotSwap(uint dwStationAddress);

// Set EtherCat master mode (configure = 0, RumMode = 1)
[DllImport("AXL.dll")] public static extern uint AxlECatSetMasterMode(uint dwMasterMode);

// Get mode status of EtherCat master.
[DllImport("AXL.dll")] public static extern uint AxlECatGetMasterMode(ref uint pdMasterMode);

// Set MasterOperationMode of EtherCat master.
[DllImport("AXL.dll")] public static extern uint AxlECatSetMasterOperationMode(uint dwOperationMode);

// Get MasterOperationMode of EtherCat master.
[DllImport("AXL.dll")] public static extern uint AxlECatGetMasterOperationMode(ref uint pdwOperationMode);

// Requesting scan command to EtherCat master, and then command to save scaned data to SHM.
[DllImport("AXL.dll")] public static extern uint AxlECatRequestScanData();


// Get total number of scanned slaves.
[DllImport("AXL.dll")] public static extern uint AxlECatGetScanSlaveCount(ref uint pdwSlaveCount);

// Get current status information of EtherCat master.
[DllImport("AXL.dll")] public static extern uint AxlECatGetStatus(ref int pnECMasterStatus, ref int pnECSlaveStatus, ref int pnECConnectedSlave, ref int pnECConfiguredSlave, ref int pnJobTaskCycleCnt, ref uint pdwECMasterNotification);

// Reconnecting failed network.
[DllImport("AXL.dll")] public static extern uint AxlEcatReConnect();


[DllImport("AXL.dll")] public static extern uint AxmECatReadAddress(int nAxisNo, ref uint dwpStationAddress, ref int npAutoIncAddress, ref uint dwpAliasAddress);
[DllImport("AXL.dll")] public static extern uint AxdECatReadAddress(int nModuleNo, ref uint dwpStationAddress, ref int npAutoIncAddress, ref uint dwpAliasAddress);
// Get address information of slave which be set.
[DllImport("AXL.dll")] public static extern uint AxaECatReadAddress(int nModuleNo, ref uint dwpStationAddress, ref int npAutoIncAddress, ref uint dwpAliasAddress);
    [DllImport("AXL.dll")] public static extern uint AxsECatReadAddress(int lPortNo, ref uint dwpStationAddress, ref int lpAutoIncAddress, ref uint dwpAliasAddress);


// Monitor
// Add an item to proceed with data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorSetItem(int nItemIndex, uint dwSignalType, int nSignalNo, int nSubSignalNo);

// Get information about items to be collected.
[DllImport("AXL.dll")] public static extern uint AxlMonitorGetIndexInfo(ref int npItemSize, ref int npItemIndex);

// Get detailed settings of each items for data collection progress.
[DllImport("AXL.dll")] public static extern uint AxlMonitorGetItemInfo(int nItemIndex, ref uint dwpSignalType, ref int npSignalNo, ref int npSubSignalNo);

// Reset settings of all data collection items.
[DllImport("AXL.dll")] public static extern uint AxlMonitorResetAllItem();

// Reset settings of selected data collection items.
[DllImport("AXL.dll")] public static extern uint AxlMonitorResetItem(int nItemIndex);

// Set the trigger condition of data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorSetTriggerOption(uint dwSignalType, int nSignalNo, int nSubSignalNo, uint dwOperatorType, double dValue1, double dValue2);


// Get the trigger condition of data collection.
//DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);
// Reset trigger condition of data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorResetTriggerOption();

// Start collecting data.
[DllImport("AXL.dll")] public static extern uint AxlMonitorStart(uint dwStartOption, uint dwOverflowOption);

// Stop collecting data.
[DllImport("AXL.dll")] public static extern uint AxlMonitorStop();

// Read collected data.
[DllImport("AXL.dll")] public static extern uint AxlMonitorReadData(ref int npItemSize, ref int npDataCount, ref double dpReadData);


// Read period of data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorReadPeriod(ref uint dwpPeriod);


